# MusicSoundEmotions

./: .gitignore  .ignore  .pdm.toml  .python-version  Readme.md  lsyncd.conf  pyproject.toml
music_sound_emotions/: data.py  experiments.py  features.py  models.py  parse_logs.py  settings.py  splits.py  utils.py  validation.py
