[project]
name = "music_sound_emotions"
version = "0.1"
description = "Mixing music and sounds for emotion recognition"
authors = [
    {name = "Federico Simonetta", email = "fsimonetta@iccmu.es"},
    {name = "Francesca Certo"},
    {name = "Stavros Ntalampiras"},
]
dependencies = [
    "auto-sklearn==0.15.0",
    "fire>=0.5.0",
    "tqdm>=4.64.1",
    "loguru>=0.6.0",
    "notifiers>=1.3.3",
    "openpyxl>=3.1.1",
]
requires-python = ">=3.9, <3.10"
license = {text = "MIT"}


[tool.pdm]

[tool.pdm.options]
add = ["--no-self"]
install = ["--no-self"]
sync = ["--no-self"]

[tool.pdm.scripts]
features = "python -m music_sound_emotions.features"
tune_and_validate = "python -m music_sound_emotions.validation tune_and_validate"
experiment = "python -m music_sound_emotions.experiments"
parse = "python -m music_sound_emotions.parse_logs"
# install_pip = "python -m ensurepip"
# install_deps = "python -m pip install kaleido==0.2"
# post_install = {composite = ["install_pip", "install_deps"]}

[tool.pdm.dev-dependencies]
dev = [
    "ipdb>=0.13.13",
]
[[tool.pdm.source]]
url = "https://pypi.anaconda.org/intel/simple"
verify_ssl = true
name = "intel"

[[tool.pdm.source]]
url = "https://pypi.org/simple"
verify_ssl = true
name = "pypi"

[tool.pdm.resolution]
respect-source-order = true

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
